Added support for connector and event sources/sinks properties
